--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "migrate": "drizzle-kit migrate"
   },
   "dependencies": {
+    "@clerk/elements": "^0.19.1",
+    "@clerk/nextjs": "^6.3.1",
     "@neondatabase/serverless": "^0.10.3",
     "@radix-ui/react-icons": "^1.3.1",
     "@radix-ui/react-label": "^2.1.0",
