--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.36.1",
+    "framer-motion": "^11.11.15",
     "lucide-react": "^0.454.0",
     "next": "^15.0.0-canary.155",
     "react": "19.0.0-rc-02c0e824-20241028",
