--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@clerk/elements": "^0.19.1",
     "@clerk/nextjs": "^6.3.1",
     "@neondatabase/serverless": "^0.10.3",
+    "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-icons": "^1.3.1",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
